# serializer version: 1
# name: test_plot_grouped_histogram_custom_columns
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'bin_label': 1,
          'bin_start': 1.0,
          'count': 1,
          'group': 'X',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.4,
          'count': 1,
          'group': 'Y',
        }),
        dict({
          'bin_label': 2,
          'bin_start': 2.0,
          'count': 1,
          'group': 'X',
        }),
        dict({
          'bin_label': 2,
          'bin_start': 2.4000000000000004,
          'count': 1,
          'group': 'Y',
        }),
        dict({
          'bin_label': 3,
          'bin_start': 3.0,
          'count': 1,
          'group': 'X',
        }),
        dict({
          'bin_label': 3,
          'bin_start': 3.4000000000000004,
          'count': 1,
          'group': 'Y',
        }),
      ]),
    }),
    'encoding': dict({
      'color': dict({
        'field': 'group',
        'legend': dict({
          'title': None,
        }),
        'type': 'nominal',
      }),
      'tooltip': list([
        dict({
          'field': 'group',
          'type': 'nominal',
        }),
        dict({
          'field': 'bin_start',
          'type': 'quantitative',
        }),
        dict({
          'field': 'count',
          'type': 'quantitative',
        }),
      ]),
      'x': dict({
        'axis': dict({
          'labelAngle': -45,
        }),
        'field': 'bin_label',
        'title': 'Value',
        'type': 'ordinal',
      }),
      'xOffset': dict({
        'field': 'group',
        'type': 'nominal',
      }),
      'y': dict({
        'field': 'count',
        'title': 'Counts',
        'type': 'quantitative',
      }),
    }),
    'height': 500,
    'mark': dict({
      'opacity': 0.8,
      'type': 'bar',
    }),
    'width': 800,
  })
# ---
# name: test_plot_grouped_histogram_dataframe_input
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'bin_label': 0,
          'bin_start': 0.8,
          'count': 1,
          'group': 'B',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.1,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.1,
          'count': 1,
          'group': 'B',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.5,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.5,
          'count': 1,
          'group': 'B',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.8,
          'count': 1,
          'group': 'B',
        }),
        dict({
          'bin_label': 2,
          'bin_start': 2.1,
          'count': 1,
          'group': 'B',
        }),
        dict({
          'bin_label': 2,
          'bin_start': 2.2,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 2,
          'bin_start': 2.7,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 3,
          'bin_start': 3.1000000000000005,
          'count': 1,
          'group': 'A',
        }),
      ]),
    }),
    'encoding': dict({
      'color': dict({
        'field': 'group',
        'legend': dict({
          'title': None,
        }),
        'type': 'nominal',
      }),
      'tooltip': list([
        dict({
          'field': 'group',
          'type': 'nominal',
        }),
        dict({
          'field': 'bin_start',
          'type': 'quantitative',
        }),
        dict({
          'field': 'count',
          'type': 'quantitative',
        }),
      ]),
      'x': dict({
        'axis': dict({
          'labelAngle': -45,
        }),
        'field': 'bin_label',
        'title': 'Value',
        'type': 'ordinal',
      }),
      'xOffset': dict({
        'field': 'group',
        'type': 'nominal',
      }),
      'y': dict({
        'field': 'count',
        'title': 'Count',
        'type': 'quantitative',
      }),
    }),
    'height': 400,
    'mark': dict({
      'opacity': 0.7,
      'type': 'bar',
    }),
    'width': 600,
  })
# ---
# name: test_plot_grouped_histogram_dict_input
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
        'labelFontSize': 12,
        'titleFontSize': 14,
      }),
      'background': 'transparent',
      'header': dict({
        'labelFontSize': 13,
        'titleFontSize': 14,
      }),
      'legend': dict({
        'labelFontSize': 12,
        'titleFontSize': 14,
      }),
      'title': dict({
        'anchor': 'start',
        'fontSize': 18,
      }),
      'view': dict({
        'fill': 'transparent',
        'stroke': 'transparent',
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'bin_label': 0,
          'bin_start': 0.8,
          'count': 1,
          'group': 'B',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.1,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.1,
          'count': 2,
          'group': 'B',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.3,
          'count': 1,
          'group': 'B',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.5,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.5,
          'count': 1,
          'group': 'B',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.6,
          'count': 1,
          'group': 'B',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.7000000000000002,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.8,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 1,
          'bin_start': 1.8,
          'count': 2,
          'group': 'B',
        }),
        dict({
          'bin_label': 2,
          'bin_start': 2.1,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 2,
          'bin_start': 2.1,
          'count': 1,
          'group': 'B',
        }),
        dict({
          'bin_label': 2,
          'bin_start': 2.2,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 2,
          'bin_start': 2.2,
          'count': 1,
          'group': 'B',
        }),
        dict({
          'bin_label': 2,
          'bin_start': 2.5,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 2,
          'bin_start': 2.7,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 3,
          'bin_start': 3.1000000000000005,
          'count': 1,
          'group': 'A',
        }),
        dict({
          'bin_label': 3,
          'bin_start': 3.3,
          'count': 1,
          'group': 'A',
        }),
      ]),
    }),
    'encoding': dict({
      'color': dict({
        'field': 'group',
        'legend': dict({
          'title': None,
        }),
        'type': 'nominal',
      }),
      'tooltip': list([
        dict({
          'field': 'group',
          'type': 'nominal',
        }),
        dict({
          'field': 'bin_start',
          'type': 'quantitative',
        }),
        dict({
          'field': 'count',
          'type': 'quantitative',
        }),
      ]),
      'x': dict({
        'axis': dict({
          'labelAngle': -45,
        }),
        'field': 'bin_label',
        'title': 'Value',
        'type': 'ordinal',
      }),
      'xOffset': dict({
        'field': 'group',
        'type': 'nominal',
      }),
      'y': dict({
        'field': 'count',
        'title': 'Counts',
        'type': 'quantitative',
      }),
    }),
    'height': 400,
    'mark': dict({
      'opacity': 0.7,
      'type': 'bar',
    }),
    'width': 600,
  })
# ---
